Flexible memory for association testing

--- a/Analysis/ROSMAP_TWAS/Data description.ipynb
+++ b/Analysis/ROSMAP_TWAS/Data description.ipynb
@@ -14,7 +14,7 @@
     "Publisher’s\n",
     "\n",
     "## Data set\n",
-    "The dataset of we used in the analysis is located on the csg cluster `/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/`. Currently there are two types of data that are being used: gene expression, and Whole genome sequencing. The path of the file is documented at each sections."
+    "The dataset of we used in the analysis is located on the csg cluster `/mnt/mfs/ctcn/datasets/rosmap/`. Currently there are two types of data that are being used: gene expression, and Whole genome sequencing. The path of the file is documented at each sections."
    ]
   },
   {
@@ -23,8 +23,8 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Whole Genome Sequencing\n",
-    "The WGS data is stored at `/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink/`\n",
+    "### Whole Genome Sequencing\n",
+    "The WGS data is stored at `/mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink/`\n",
     "There are 7176 samples being sequenced over 9536310 snps. These information is acquired by the following commands on the cluster"
    ]
   },
@@ -36,11 +36,41 @@
    },
    "outputs": [],
    "source": [
-    "cd /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink\n",
+    "cd /mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink\n",
     "# For number of samples\n",
     "wc *.fam\n",
     "# For number of SNPs\n",
     "wc *.bim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "### Genome type list\n",
+    "The genome type list file is created with the following code. This file provide a diretory for the genotype file that are used for the analysis workflow to run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "library(dplyr)\n",
+    "library(tibble)\n",
+    "a = tibble(\n",
+    "  chr = c(seq(1:23))\n",
+    ")%>%mutate(\n",
+    "  dir = paste(\"/mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink/chr\",chr,\".bed\", sep = \"\"))%>%\n",
+    "    select(\"#chr\" = chr,dir)%>%\n",
+    "    readr::write_tsv( path = \"~/Rosmap_wgs_genotype_list.txt\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
    ]
   },
   {
@@ -61,13 +91,13 @@
     "The gene expression data for each tissues is stored at the following folders.\n",
     "\n",
     "For dorsolateral prefrontal cortex (DLPFC), 18629 genes from 1092 samples were sequenced.\n",
-    "`/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/`\n",
+    "`/mnt/mfs/ctcn/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/`\n",
     "\n",
     "For anterior commissure (AC), 19147 genes from 731 samples were sequenced\n",
-    "`/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/`\n",
+    "`/mnt/mfs/ctcn/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/`\n",
     "\n",
     "For posterior cingulate cortex (PCC), 19017 genes from samples were sequenced\n",
-    "`/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/`\n",
+    "`/mnt/mfs/ctcn/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/`\n",
     "The amount of samples sequenced is acquired by the following commands on the cluster\n",
     "\n",
     "In it there is various folder as outlined below:\n",
@@ -95,13 +125,13 @@
    "outputs": [],
    "source": [
     "# To get the number of samples\n",
-    "head -1 /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsPlusBaselineAgeGenderAdj.txt | wc\n",
-    "head -1 /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/residuals/geneTpmResidualsAgeGenderAdj.txt | wc\n",
-    "head -1 /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/residuals/geneTpmResidualsAgeGenderAdj.txt  | wc\n",
+    "head -1 /mnt/mfs/ctcn/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsPlusBaselineAgeGenderAdj.txt | wc\n",
+    "head -1 /mnt/mfs/ctcn/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/residuals/geneTpmResidualsAgeGenderAdj.txt | wc\n",
+    "head -1 /mnt/mfs/ctcn/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/residuals/geneTpmResidualsAgeGenderAdj.txt  | wc\n",
     "# To get the number of genes\n",
-    "head -1 /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsPlusBaselineAgeGenderAdj.txt | wc\n",
-    "head -1 /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/residuals/geneTpmResidualsAgeGenderAdj.txt | wc\n",
-    "head -1 /mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/residuals/geneTpmResidualsAgeGenderAdj.txt  | wc\n"
+    "head -1 /mnt/mfs/ctcn/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsPlusBaselineAgeGenderAdj.txt | wc\n",
+    "head -1 /mnt/mfs/ctcn/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/residuals/geneTpmResidualsAgeGenderAdj.txt | wc\n",
+    "head -1 /mnt/mfs/ctcn/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/residuals/geneTpmResidualsAgeGenderAdj.txt  | wc\n"
    ]
   },
   {
@@ -116,7 +146,7 @@
     "* Create a region list file for all the regions that are contained in the gene expression file. This list allow us to flexibily control what regions are included in the analysis\n",
     "\n",
     "The Index file that were used to matched the sample name can be found here:\n",
-    " `/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/wgs/ampad/qualityControl/sampleSheetAfterQc.csv`\n"
+    " `/mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/qualityControl/sampleSheetAfterQc.csv`\n"
    ]
   },
   {
@@ -131,7 +161,7 @@
     "    --ref \"/home/hs3163/Project/Rosmap/data/patient_key_WGS.txt\" \\\n",
     "    --name_col 2 \\\n",
     "    --real_name_col 1 \\\n",
-    "    --gene_exp \"/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsAgeGenderAdj.txt\" \\\n",
+    "    --gene_exp \"/mnt/mfs/ctcn/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsAgeGenderAdj.txt\" \\\n",
     "    --start_at 2 \\\n",
     "    --output \"/home/hs3163/Project/Rosmap/data/gene_exp/DLPFC\" \\\n",
     "    -J 6 -q csg -c ~/system_file/csg.yml"
