--- a/Analysis/ROSMAP_TWAS/Pipeline_testing_Rosmap_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Pipeline_testing_Rosmap_analysis.ipynb
@@ -443,6 +443,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "#With the path changed, the scripts to generate the new Genotype_list is as followed\n",
+    "library(dplyr)\n",
+    "library(tibble)\n",
+    "a = tibble(\n",
+    "  chr = c(seq(1:23))\n",
+    ")%>%mutate(\n",
+    "  dir = paste(\"/mnt/mfs/hgrcgrid/shared/DeJagerLab/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink/chr\",chr,\".bed\", sep = \"\"))%>%\n",
+    "    select(\"#chr\" = chr,dir)%>%\n",
+    "    readr::write_tsv( path = \"~/Rosmap_wgs_genotype_list.txt\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "kernel": "R"
