major update in ALZ notebook

--- a/Analysis/ROSMAP_TWAS/Pipeline_testing_Rosmap_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Pipeline_testing_Rosmap_analysis.ipynb
@@ -462,6 +462,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "# A fake genotype list file was created for debug purpose\n",
+    "a = tibble(\n",
+    "  chr = c(seq(1:23))\n",
+    ")%>%mutate(\n",
+    "  dir = paste(\"~/test/chr\",chr,\".bed\", sep = \"\"))%>%\n",
+    "    select(\"#chr\" = chr,dir)%>%\n",
+    "    readr::write_tsv( path = \"~/fake_Rosmap_wgs_genotype_list.txt\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "kernel": "R"
