--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -568,8 +568,8 @@
     "    --make-bed \\\n",
     "    --out $[_output[0]:n] \\\n",
     "    --chr $[_regions[0]] \\\n",
-    "    --from-bp $[int(_regions[1]) + window ] \\\n",
-    "    --to-bp $[int(_regions[2]) - window ] \\\n",
+    "    --from-bp $[int(_regions[1]) - window ] \\\n",
+    "    --to-bp $[int(_regions[2]) + window ] \\\n",
     "    --keep $[_input[1]] \\\n",
     "    --allow-no-sex || true\n",
     "    touch $[_output]"
