--- a/Analysis/ROSMAP_TWAS/Data description.ipynb
+++ b/Analysis/ROSMAP_TWAS/Data description.ipynb
@@ -63,6 +63,17 @@
    },
    "outputs": [],
    "source": [
+    "Due to the issue: https://github.com/cumc/neuro-twas/issues/19 , a symbolic link was created and were used in the genotype_list file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "library(dplyr)\n",
     "library(tibble)\n",
     "a = tibble(\n",
@@ -70,12 +81,15 @@
     ")%>%mutate(\n",
     "  dir = paste(\"/mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink/chr\",chr,\".bed\", sep = \"\"))%>%\n",
     "    select(\"#chr\" = chr,dir)%>%\n",
-    "    readr::write_tsv( path = \"~/Rosmap_wgs_genotype_list.txt\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+    "    readr::write_tsv( path = \"/home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "kernel": "SoS"
    },
    "source": [
