minor bug fixed

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -719,8 +719,8 @@
     "bash: expand= \"$[ ]\"\n",
     "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
     "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
-    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' *wei* > Alz_passed_gene_region_list.txt\n",
-    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' *wei* > All_hsq_list.txt\n",
+    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' $[weights_path]/*wei* > Alz_passed_gene_region_list.txt\n",
+    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' $[weights_path]/*wei* > All_hsq_list.txt\n",
     "\n",
     "\n"
    ]
