--- a/Analysis/ROSMAP_TWAS/Data description.ipynb
+++ b/Analysis/ROSMAP_TWAS/Data description.ipynb
@@ -104,13 +104,13 @@
    "source": [
     "The gene expression data for each tissues is stored at the following folders.\n",
     "\n",
-    "For dorsolateral prefrontal cortex (DLPFC), 18629 genes from 1092 samples were sequenced.\n",
+    "For dorsolateral prefrontal cortex (DLPFC), 18629 genes (filtered from 58302) from 1092 samples were sequenced.\n",
     "`/mnt/mfs/ctcn/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/`\n",
     "\n",
     "For anterior commissure (AC), 19147 genes from 731 samples were sequenced\n",
     "`/mnt/mfs/ctcn/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/`\n",
     "\n",
-    "For posterior cingulate cortex (PCC), 19017 genes from samples were sequenced\n",
+    "For posterior cingulate cortex (PCC), 19017 genes (filtered from 58302) from samples were sequenced\n",
     "`/mnt/mfs/ctcn/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/`\n",
     "The amount of samples sequenced is acquired by the following commands on the cluster\n",
     "\n",
@@ -196,7 +196,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "To eestimate how many of the genes passed can pass the heritability check, following command is ran."
+    "To estimate how many of the genes passed can pass the heritability check, following command is ran."
    ]
   },
   {
