--- a/Analysis/ROSMAP_TWAS/Training_Testing_imputed_expression.ipynb
+++ b/Analysis/ROSMAP_TWAS/Training_Testing_imputed_expression.ipynb
@@ -128,8 +128,29 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Imputed expression estimation and comparison.\n"
+    "# Imputed expression estimation and comparison."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "suppressMessages(library('plink2R'))\n",
+    "read_plink()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,10 +170,18 @@
   "sos": {
    "kernels": [
     [
+     "R",
+     "ir",
+     "R",
+     "#DCDCDA",
+     ""
+    ],
+    [
      "SoS",
      "sos",
      "",
-     ""
+     "",
+     "sos"
     ]
    ],
    "version": "0.20.1"
