add extract feature for twas step 2

--- a/Analysis/ROSMAP_TWAS/Data description.ipynb
+++ b/Analysis/ROSMAP_TWAS/Data description.ipynb
@@ -178,7 +178,24 @@
     "    --gene_exp \"/mnt/mfs/ctcn/datasets/rosmap/rnaseq/dlpfcTissue/batch0-m5/values/residuals/geneTpmResidualsAgeGenderAdj.txt\" \\\n",
     "    --start_at 2 \\\n",
     "    --output \"/home/hs3163/Project/Rosmap/data/gene_exp/DLPFC\" \\\n",
-    "    -J 6 -q csg -c ~/system_file/csg.yml"
+    "    -J 6 -q csg -c ~/system_file/csg.yml\n",
+    "\n",
+    "sos run ~/GIT/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
+    "    --ref \"/home/hs3163/Project/Rosmap/data/patient_key_WGS.txt\" \\\n",
+    "    --name_col 2 \\\n",
+    "    --real_name_col 1 \\\n",
+    "    --gene_exp \"/mnt/mfs/ctcn/datasets/rosmap/rnaseq/pccTissue/mbatch1-5/values/residuals/geneTpmResidualsAgeGenderAdj.txt\" \\\n",
+    "    --start_at 2 \\\n",
+    "    --output \"/home/hs3163/Project/Rosmap/data/gene_exp/PCC\" \\\n",
+    "    -J 6 -q csg -c ~/system_file/csg.yml\n",
+    "\n",
+    "sos run ~/GIT/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
+    "    --ref \"/home/hs3163/Project/Rosmap/data/patient_key_WGS.txt\" \\\n",
+    "    --name_col 2 \\\n",
+    "    --real_name_col 1 \\\n",
+    "    --gene_exp \"/mnt/mfs/ctcn/datasets/rosmap/rnaseq/acTissue/mbatch1-4/values/residuals/geneTpmResidualsAgeGenderAdj.txt\" \\\n",
+    "    --start_at 2 \\\n",
+    "    --output \"/home/hs3163/Project/Rosmap/data/gene_exp/AC\" &"
    ]
   },
   {
