--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -558,8 +558,12 @@
     "output: f'{_input[0]:n}.bed',\n",
     "        f'{_input[0]:n}.bim',\n",
     "        f'{_input[0]:n}.fam'\n",
+    "\n",
     "# look up for genotype file\n",
     "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
+    "\n",
+    "parameter: extract_snp = f'{geno_file:an}.bim'\n",
+    "\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
@@ -571,6 +575,7 @@
     "    --from-bp $[int(_regions[1]) - window ] \\\n",
     "    --to-bp $[int(_regions[2]) + window ] \\\n",
     "    --keep $[_input[1]] \\\n",
+    "    --extract $[extract_snp]\n",
     "    --allow-no-sex || true\n",
     "    touch $[_output]"
    ]
