add exclude snp options

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -563,7 +563,7 @@
     "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "\n",
     "parameter: extract_snp = f'{geno_file:an}.bim'\n",
-    "\n",
+    "parameter: exclude_snp = \n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
@@ -576,6 +576,7 @@
     "    --to-bp $[int(_regions[2]) + window ] \\\n",
     "    --keep $[_input[1]] \\\n",
     "    --extract $[extract_snp]\n",
+    "    --exclude $[exclude_snp]\n",
     "    --allow-no-sex || true\n",
     "    touch $[_output]"
    ]
@@ -726,6 +727,7 @@
     "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
     "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' $[weights_path]/*wei* > Alz_passed_gene_region_list.txt\n",
     "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' $[weights_path]/*wei* > All_hsq_list.txt\n",
+    "    \n",
     "\n",
     "\n"
    ]
