Add exclude sample options

--- a/Analysis/ROSMAP_TWAS/Data description.ipynb
+++ b/Analysis/ROSMAP_TWAS/Data description.ipynb
@@ -154,6 +154,67 @@
     "kernel": "SoS"
    },
    "source": [
+    "# Problemetic SNPs\n",
+    "When using the WGS data to perform TWAS fusion or any other computation that required the bed matrix to be scale() in R. 3 SNPs,7:100549543_A_G\" \"7:100614961_A_G\" \"7:100615281_A_G\", on chromosome 7 have universial 1, which produce NaN in R and hence casuing error that illustrated in issue #23. The code used to identified the error is shown below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: Rcpp\n",
+      "\n",
+      "Loading required package: RcppEigen\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in scale(geno$bed[, m[m.keep]]): 找不到对象'm'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in scale(geno$bed[, m[m.keep]]): 找不到对象'm'\nTraceback:\n",
+      "1. scale(geno$bed[, m[m.keep]])"
+     ]
+    }
+   ],
+   "source": [
+    "library(tibble)\n",
+    "library(plink2R)\n",
+    "library(dplyr)\n",
+    "geno=read_plink(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Remote_Proj/Alz/Alz_PCC_SNP/result/chr7\",impute=\"avg\")\n",
+    "cur.genos = scale(geno$bed[,m[m.keep]])\n",
+    "name = (colnames(t(cur.genos))[1])\n",
+    "t(cur.genos)%>%as.data.frame%>%filter(is.na(.[[name]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "### Data Pre Processing\n",
     "Currently the sample names used in the gene expression file and the wgs file is not the same. A sos workflow is adopted to \n",
     "* Match the sample names of the gene expression file with that of the genotypes file\n",
