--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -563,7 +563,8 @@
     "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "\n",
     "parameter: extract_snp = f'{geno_file:an}.bim'\n",
-    "parameter: exclude_snp = \n",
+    "parameter: exclude_snp = \"\"\n",
+    "parameter: keep_sample = f'{_input[1]}'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
@@ -574,7 +575,7 @@
     "    --chr $[_regions[0]] \\\n",
     "    --from-bp $[int(_regions[1]) - window ] \\\n",
     "    --to-bp $[int(_regions[2]) + window ] \\\n",
-    "    --keep $[_input[1]] \\\n",
+    "    --keep $[keep_sample] \\\n",
     "    --extract $[extract_snp]\n",
     "    --exclude $[exclude_snp]\n",
     "    --allow-no-sex || true\n",
