Add exclude sample options

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -563,7 +563,7 @@
     "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "\n",
     "parameter: extract_snp = f'{geno_file:an}.bim'\n",
-    "parameter: exclude_snp = \"\"\n",
+    "parameter: exclude_snp = \"./.\"\n",
     "parameter: keep_sample = f'{_input[1]}'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
