add final output table

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -723,14 +723,14 @@
     "input: group_by = \"all\"\n",
     "output: f'{wd:a}/error_no_plink.log',\n",
     "        f'{wd:a}/error_no_wgt_computed.log'\n",
+    "        f'{weights_path:a}/all_hsq.txt'\n",
+    "        f'{output_path:a}/all_result.txt'\n",
     "bash: expand= \"$[ ]\"\n",
     "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
     "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
-    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' $[weights_path]/*wei* > Alz_passed_gene_region_list.txt\n",
-    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' $[weights_path]/*wei* > All_hsq_list.txt\n",
-    "    \n",
-    "\n",
-    "\n"
+    "    echo filename heritability h_SE pval >  $[_output[2]]\n",
+    "    cat $[weights_path]/*hsq >>  $[_output[2]]\n",
+    "    cat $[output_path]/*twas.txt > $[_output[3]]"
    ]
   },
   {
