--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 1,
    "metadata": {
     "kernel": "SoS"
    },
@@ -723,14 +723,15 @@
     "input: group_by = \"all\"\n",
     "output: f'{wd:a}/error_no_plink.log',\n",
     "        f'{wd:a}/error_no_wgt_computed.log'\n",
-    "        f'{weights_path:a}/all_hsq.txt'\n",
-    "        f'{output_path:a}/all_result.txt'\n",
+    "        f'{weights_path}/all_hsq.txt'\n",
+    "        f'{output_path}/all_result.txt'\n",
     "bash: expand= \"$[ ]\"\n",
     "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
     "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
     "    echo filename heritability h_SE pval >  $[_output[2]]\n",
     "    cat $[weights_path]/*hsq >>  $[_output[2]]\n",
-    "    cat $[output_path]/*twas.txt > $[_output[3]]"
+    "    cat $[output_path]/*twas.txt > $[_output[3]]\n",
+    "    touch $[_output[3]]"
    ]
   },
   {
