--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -722,8 +722,8 @@
     "[twas_fusion_6,compute_wgt_5]\n",
     "input: group_by = \"all\"\n",
     "output: f'{wd:a}/error_no_plink.log',\n",
-    "        f'{wd:a}/error_no_wgt_computed.log'\n",
-    "        f'{weights_path}/all_hsq.txt'\n",
+    "        f'{wd:a}/error_no_wgt_computed.log',\n",
+    "        f'{weights_path}/all_hsq.txt',\n",
     "        f'{output_path}/all_result.txt'\n",
     "bash: expand= \"$[ ]\"\n",
     "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
