--- a/Analysis/ROSMAP_TWAS/Training_Testing_imputed_expression.ipynb
+++ b/Analysis/ROSMAP_TWAS/Training_Testing_imputed_expression.ipynb
@@ -154,6 +154,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"sos_logging sos_info\">INFO: Running <span class=\"sos_highlight\">susie_1</span>: \n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HINT: Pulling docker image gaow/twas\n",
+      "Error in library(\"susieR\") : there is no package called ‘susieR’\n",
+      "Execution halted\n",
+      "\u001b[91mERROR\u001b[0m: \u001b[91m[susie_1]: [0]: Executing script in docker returns an error (exitcode=1).\n",
+      "The script has been saved to /Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Analysis/ROSMAP_TWAS/.sos/docker_run_24279.R. To reproduce the error please run:\n",
+      "\u001b[0m\u001b[32mdocker run --rm  -v /Users/haosun/Documents/WG_Reasearch_Assisstant:/Users/haosun/Documents/WG_Reasearch_Assisstant -v /Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Analysis/ROSMAP_TWAS/.sos/docker_run_24279.R:/var/lib/sos/docker_run_24279.R    -t  -w=/Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Analysis/ROSMAP_TWAS -u 501:20    gaow/twas Rscript /var/lib/sos/docker_run_24279.R\u001b[0m\u001b[91m\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run\n",
+    "[susie_1]\n",
+    "geno_file = \"/Users/haosun/Documents/WG_Reasearch_Assisstant/\"\n",
+    "R: expand= \"$[ ]\", volumes = [f'{geno_file}:{geno_file}']\n",
+    "   library(\"susieR\")\n",
+    "   library(\"plink2R\")\n",
+    "    geno = read_plink(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Remote_Proj/Alz/Alz_AC_SNP/cache/geneTpmResidualsAgeGenderAdj_rename.ENSG00000256294\")\n",
+    "    X = scale(geno$bed)\n",
+    "    Y = geno$fam[6,]\n",
+    "    fitted = susie(X, Y[,1],\n",
+    "              L = 10,\n",
+    "              estimate_residual_variance = TRUE, \n",
+    "              estimate_prior_variance = FALSE, \n",
+    "              scaled_prior_variance = 0.2)\n",
+    "    Hsq = var(predict(fitted)) / var(Y)\n",
+    "    Hsq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in library(\"susieR\") : there is no package called ‘susieR’\n",
+      "Execution halted\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker run --rm  -v /Users/haosun/Documents/WG_Reasearch_Assisstant:/Users/haosun/Documents/WG_Reasearch_Assisstant -v /Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Analysis/ROSMAP_TWAS/.sos/docker_run_24279.R:/var/lib/sos/docker_run_24279.R    -t  -w=/Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Analysis/ROSMAP_TWAS -u 501:20    gaow/twas Rscript /var/lib/sos/docker_run_24279.R"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "kernel": "R"
@@ -179,11 +249,18 @@
   "sos": {
    "kernels": [
     [
+     "Bash",
+     "calysto_bash",
+     "Bash",
+     "#E6EEFF",
+     ""
+    ],
+    [
      "R",
      "ir",
      "R",
      "#DCDCDA",
-     ""
+     "r"
     ],
     [
      "SoS",
