--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -512,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "[twas_fusion_1,compute_wgt_1]\n",
+    "[twas_fusion_1,compute_wgt_1,susie_1]\n",
     "\n",
     "input: molecular_pheno, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
@@ -553,7 +553,7 @@
    },
    "outputs": [],
    "source": [
-    "[twas_fusion_2,compute_wgt_2]\n",
+    "[twas_fusion_2,compute_wgt_2,susie_2]\n",
     "input: group_by = 2, group_with = 'regions'\n",
     "output: f'{_input[0]:n}.bed',\n",
     "        f'{_input[0]:n}.bim',\n",
@@ -756,13 +756,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Conducting of susieR test\n",
+    "This step use the susieR packages to recompute the heritability and the weight of the result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "kernel": "SoS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Susie tesst\n",
+    "[susie_3]\n",
+    "input: group_with = 'regions'\n",
+    "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
+    "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt'\n",
+    "\n",
+    "parameter: causal_variables_L = 10\n",
+    "parameter: scaled_prior_variance = 0.1\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = , tags = f'{step_name}_{_output[0]:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{wd:a}:{wd:a}']\n",
+    "  library(\"dplyr\")\n",
+    "  library(\"tibble\")\n",
+    "  library(\"susieR\")\n",
+    "  library(\"plink2R\")\n",
+    "  genos = read_plink(_input[0]:n)\n",
+    "  \n",
+    "  # hsq for removing all the na snps\n",
+    "  X = genos$bed%>%t()%>%na.omit()%>%t()%>%scale()\n",
+    "  Y = geno$fam%>%as.tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
+    "  fitted1 = susie(X, Y$V6,\n",
+    "                L = $[causal_variables_L],\n",
+    "                estimate_residual_variance = TRUE, \n",
+    "                estimate_prior_variance = FALSE,\n",
+    "                scaled_prior_variance = $[scaled_prior_variance])\n",
+    "  H1 = var(predict(fitted1)) / var(Y$V6)\n",
+    "  # hsq for removing all the na samples\n",
+    "  X2 = genos$bed%>%na.omit()%>%scale()\n",
+    "  Y2 = Y%>%filter(name%in%rownames(X2))\n",
+    "  fitted2 = susie(X2, Y2$V6,\n",
+    "                L = $[causal_variables_L],\n",
+    "                estimate_residual_variance = TRUE, \n",
+    "                estimate_prior_variance = FALSE,\n",
+    "                scaled_prior_variance = $[scaled_prior_variance])\n",
+    "  H2 = var(predict(fitted2)) / var(Y$V6)\n",
+    "  # hsq for removing all the na samples and na SNPs\n",
+    "  X3 = X[rownames(X) == Y$name]\n",
+    "  fitted3 = susie(X3, Y2$V6,\n",
+    "                L = $[causal_variables_L],\n",
+    "                estimate_residual_variance = TRUE, \n",
+    "                estimate_prior_variance = FALSE,\n",
+    "                scaled_prior_variance = $[scaled_prior_variance])\n",
+    "  H3 = var(predict(fitted3)) / var(Y$V6)\n",
+    "  # hsq for the best performing snp using naive way, excluding only the na SNP\n",
+    "  sumstats <- univariate_regression(X, Y$V6)\n",
+    "  z_scores <- sumstats$betahat / sumstats$sebetahat\n",
+    "  top_snp = which(abs(z_scores) == max(abs(z_scores)))\n",
+    "  HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
+    "  # storing all the HSQ\n",
+    "  hsq_tbl = tibble(hsq_full_sample = H1, hsq_full_snp = H2, hsq_neither = H3, hsq_naive = H4)\n",
+    "  hsq_tbl%>%write_delim($[_output[0]])\n",
+    "  # storing the wgt computed from susie, excluding only the na SNP\n",
+    "  susie_wgt = tibble(susie = coef(fitted)[2:length(coef(fitted))])\n",
+    "  susie_wgt%>%write_delim($[_output[1]])\n",
+    "  \n",
+    "#Create all_hsq for susie\n",
+    "[susie_4]\n",
+    "input: group_by = \"all\"\n",
+    "output:f'{wd:a}/susie/all_hsq.txt'\n",
+    "bash: expand= \"$[ ]\",\n",
+    "  head -1 $[_input[0]] > $[_output]\n",
+    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample >> $[_output]"
+   ]
   }
  ],
  "metadata": {
