--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -778,10 +778,9 @@
     "input: group_with = 'regions'\n",
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
     "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt'\n",
-    "\n",
     "parameter: causal_variables_L = 10\n",
     "parameter: scaled_prior_variance = 0.1\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = , tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{wd:a}:{wd:a}']\n",
     "  library(\"dplyr\")\n",
     "  library(\"tibble\")\n",
@@ -831,7 +830,7 @@
     "[susie_4]\n",
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt'\n",
-    "bash: expand= \"$[ ]\",\n",
+    "bash: expand= \"$[ ]\"\n",
     "  head -1 $[_input[0]] > $[_output]\n",
     "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample >> $[_output]"
    ]
