--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -781,7 +781,7 @@
     "\n",
     "parameter: causal_variables_L = 10\n",
     "parameter: scaled_prior_variance = 0.1\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = , tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = "6G" , tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{wd:a}:{wd:a}']\n",
     "  library(\"dplyr\")\n",
     "  library(\"tibble\")\n",
