--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -516,59 +516,61 @@
    },
    "outputs": [],
    "source": [
-    "#Susie tesst\n",
+    "#Susie\n",
     "[susie_3]\n",
     "input: group_with = 'regions'\n",
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
     "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt'\n",
+    "\n",
     "parameter: causal_variables_L = 10\n",
     "parameter: scaled_prior_variance = 0.1\n",
+    "    \n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{wd:a}:{wd:a}']\n",
-    "  library(\"dplyr\")\n",
-    "  library(\"tibble\")\n",
-    "  library(\"susieR\")\n",
-    "  library(\"plink2R\")\n",
-    "  genos = read_plink(_input[0]:n)\n",
-    "  \n",
-    "  # hsq for removing all the na snps\n",
-    "  X = genos$bed%>%t()%>%na.omit()%>%t()%>%scale()\n",
-    "  Y = geno$fam%>%as.tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
-    "  fitted1 = susie(X, Y$V6,\n",
-    "                L = $[causal_variables_L],\n",
-    "                estimate_residual_variance = TRUE, \n",
-    "                estimate_prior_variance = FALSE,\n",
-    "                scaled_prior_variance = $[scaled_prior_variance])\n",
-    "  H1 = var(predict(fitted1)) / var(Y$V6)\n",
-    "  # hsq for removing all the na samples\n",
-    "  X2 = genos$bed%>%na.omit()%>%scale()\n",
-    "  Y2 = Y%>%filter(name%in%rownames(X2))\n",
-    "  fitted2 = susie(X2, Y2$V6,\n",
-    "                L = $[causal_variables_L],\n",
-    "                estimate_residual_variance = TRUE, \n",
-    "                estimate_prior_variance = FALSE,\n",
-    "                scaled_prior_variance = $[scaled_prior_variance])\n",
-    "  H2 = var(predict(fitted2)) / var(Y$V6)\n",
-    "  # hsq for removing all the na samples and na SNPs\n",
-    "  X3 = X[rownames(X) == Y$name]\n",
-    "  fitted3 = susie(X3, Y2$V6,\n",
-    "                L = $[causal_variables_L],\n",
-    "                estimate_residual_variance = TRUE, \n",
-    "                estimate_prior_variance = FALSE,\n",
-    "                scaled_prior_variance = $[scaled_prior_variance])\n",
-    "  H3 = var(predict(fitted3)) / var(Y$V6)\n",
-    "  # hsq for the best performing snp using naive way, excluding only the na SNP\n",
-    "  sumstats <- univariate_regression(X, Y$V6)\n",
-    "  z_scores <- sumstats$betahat / sumstats$sebetahat\n",
-    "  top_snp = which(abs(z_scores) == max(abs(z_scores)))\n",
-    "  HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
-    "  # storing all the HSQ\n",
-    "  hsq_tbl = tibble(hsq_full_sample = H1, hsq_full_snp = H2, hsq_neither = H3, hsq_naive = H4)\n",
-    "  hsq_tbl%>%write_delim($[_output[0]])\n",
-    "  # storing the wgt computed from susie, excluding only the na SNP\n",
-    "  susie_wgt = tibble(susie = coef(fitted)[2:length(coef(fitted))])\n",
-    "  susie_wgt%>%write_delim($[_output[1]])\n",
-    "  \n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container, volumes = [f'{wd:a}:{wd:a}']\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"susieR\")\n",
+    "    library(\"plink2R\")\n",
+    "    genos = read_plink(_input[0]:n)\n",
+    "    \n",
+    "    # hsq for removing all the na snps\n",
+    "    X = genos$bed%>%t()%>%na.omit()%>%t()%>%scale()\n",
+    "    Y = geno$fam%>%as.tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
+    "    fitted1 = susie(X, Y$V6,\n",
+    "                  L = $[causal_variables_L],\n",
+    "                  estimate_residual_variance = TRUE, \n",
+    "                  estimate_prior_variance = FALSE,\n",
+    "                  scaled_prior_variance = $[scaled_prior_variance])\n",
+    "    H1 = var(predict(fitted1)) / var(Y$V6)\n",
+    "    # hsq for removing all the na samples\n",
+    "    X2 = genos$bed%>%na.omit()%>%scale()\n",
+    "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
+    "    fitted2 = susie(X2, Y2$V6,\n",
+    "                  L = $[causal_variables_L],\n",
+    "                  estimate_residual_variance = TRUE, \n",
+    "                  estimate_prior_variance = FALSE,\n",
+    "                  scaled_prior_variance = $[scaled_prior_variance])\n",
+    "    H2 = var(predict(fitted2)) / var(Y$V6)\n",
+    "    # hsq for removing all the na samples and na SNPs\n",
+    "    X3 = X[rownames(X) == Y$name]\n",
+    "    fitted3 = susie(X3, Y2$V6,\n",
+    "                  L = $[causal_variables_L],\n",
+    "                  estimate_residual_variance = TRUE, \n",
+    "                  estimate_prior_variance = FALSE,\n",
+    "                  scaled_prior_variance = $[scaled_prior_variance])\n",
+    "    H3 = var(predict(fitted3)) / var(Y$V6)\n",
+    "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
+    "    sumstats <- univariate_regression(X, Y$V6)\n",
+    "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
+    "    top_snp = which(abs(z_scores) == max(abs(z_scores)))\n",
+    "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
+    "    # storing all the HSQ\n",
+    "    hsq_tbl = tibble(hsq_full_sample = H1, hsq_full_snp = H2, hsq_neither = H3, hsq_naive = H4)\n",
+    "    hsq_tbl%>%write_delim($[_output[0]])\n",
+    "    # storing the wgt computed from susie, excluding only the na SNP\n",
+    "    susie_wgt = tibble(susie = coef(fitted)[2:length(coef(fitted))])\n",
+    "    susie_wgt%>%write_delim($[_output[1]])\n",
+    "    \n",
     "#Create all_hsq for susie\n",
     "[susie_4]\n",
     "input: group_by = \"all\"\n",
