--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# TWAS FUSION analysis\n",
     "\n",
-    "This notebook implements a TWAS analysis workflow using the FUSION software.\n"
+    "This notebook implements a TWAS analysis workflow using the FUSION software."
    ]
   },
   {
@@ -19,7 +19,15 @@
    "source": [
     "## Aim\n",
     "\n",
-    "The aim of this pipeline is to build a prediction model for gene expression using cis-SNPs by obtaining \"weights\" from multiple regression of gene expression levels on SNP genotypes. The weights can then be combined with the GWAS data to test for association between predicted gene expression and GWAS phenotypes. Either GWAS summary statistics or GWAS genotype + phenotype data can be used for the association testing. \n",
+    "The aim of this pipeline is to build a prediction model for gene expression using cis-SNPs by obtaining \"weights\" from multiple regression of gene expression levels on SNP genotypes. The weights can then be combined with the GWAS data to test for association between predicted gene expression and GWAS phenotypes. Either GWAS summary statistics or GWAS genotype + phenotype data can be used for the association testing. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "## Overview\n",
     "\n",
     "__Objective__: \n",
@@ -37,8 +45,15 @@
     " \n",
     "The weights are computed via various models: blup, bslmm, lasso,top1, and enet. BLUP(best linear unbiased predictors)/bslmm(Bayesian linear mixed model) are conducted using gemma, lasso using plink, and enet (elastic net) using cv.glmnet function in R.\n",
     "\n",
-    "Before the weight calculation, the heritability of each gene are computed using GCTA; genes with insignificant heritability were screened out.\n",
-    "    \n",
+    "Before the weight calculation, the heritability of each gene are computed using GCTA; genes with insignificant heritability were screened out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "## Pre-requisites\n",
     "\n",
     "We provide a container image `docker://gaow/twas` that contains all software needed to run the pipeline. If you would like to configure it by yourself, please make sure you install the following software before running this notebook:\n",
@@ -48,7 +63,7 @@
     "- Modified `Fusion.compute_weights.R` scripts can be found [in this github repo](https://github.com/cumc/neuro-twas/blob/master/Workflow/FUSION.compute_weights.R).\n",
     "- The original `FUSION.assoc_test.R` script can be found [in the author's github repo](https://github.com/gusevlab/fusion_twas).\n",
     "\n",
-    "You need to make both `Fusion.compute_weights.R` and `FUSION.assoc_test.R` executable with `Rscript` command. See [this line]() for an example. "
+    "You need to make both `Fusion.compute_weights.R` and `FUSION.assoc_test.R` executable with `Rscript` command. See [this line]() for an example."
    ]
   },
   {
@@ -87,12 +102,27 @@
     "- `.dat` the actual TWAS association of the genes, a detailed description of this output are outlined here:http://gusevlab.org/projects/fusion/\n",
     "\n",
     "\n",
+    " \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "# Command interface "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "kernel": "SoS"
    },
@@ -101,7 +131,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No help information is available for script run: Failed to locate twas_fusion.ipynb.sos\n"
+      "usage: sos run twas_fusion.ipynb [workflow_name | -t targets] [options] [workflow_options]\n",
+      "  workflow_name:        Single or combined workflows defined in this script\n",
+      "  targets:              One or more targets to generate\n",
+      "  options:              Single-hyphen sos parameters (see \"sos run -h\" for details)\n",
+      "  workflow_options:     Double-hyphen workflow-specific parameters\n",
+      "\n",
+      "Workflows:\n",
+      "  twas_fusion\n",
+      "  association_test\n",
+      "\n",
+      "Global Workflow Options:\n",
+      "  --molecular-pheno VAL (as path, required)\n",
+      "                        Path to the input molecular phenotype data.\n",
+      "  --gwas-sumstat VAL (as path, required)\n",
+      "                        Path to GWAS summary statistics data (association\n",
+      "                        results between SNP and disease in a GWAS)\n",
+      "  --genotype-list VAL (as path, required)\n",
+      "                        An index text file with two columns of chromosome and\n",
+      "                        the corresponding PLINK bed file.\n",
+      "  --region-list VAL (as path, required)\n",
+      "                        An index text file with 4 columns specifying the chr,\n",
+      "                        start, end and names of regions to analyze\n",
+      "  --wd . (as path)\n",
+      "                        Path to the work directory of the weight computation:\n",
+      "                        output weights and cache will be saved to this\n",
+      "                        directory.\n",
+      "  --weights-path  f'{wd:a}/WEIGHTS'\n",
+      "\n",
+      "                        Specify the directory to save fitted weights\n",
+      "  --weights-list  f'{weights_path}/{molecular_pheno:bn}.weights_list.txt'\n",
+      "\n",
+      "                        Path to list of weights\n",
+      "  --region-name VAL (as int, required)\n",
+      "                        Specify the column in the molecular_pheno file that\n",
+      "                        contains the name of the region of interest\n",
+      "  --data-start VAL (as int, required)\n",
+      "                        Specify the column in the molecular_pheno file where the\n",
+      "                        actual data start\n",
+      "  --window 50000 (as int)\n",
+      "                        Specify the scanning window for the up and downstream\n",
+      "                        radius to analyze around the region of interest, in\n",
+      "                        units of Kb\n",
+      "  --model blsmm blup lasso top1 enet (as list)\n",
+      "                        Specify what model are used to compute weights. Notice\n",
+      "                        that `blsmm` can be very resource consuming.\n",
+      "  --container 'gaow/twas'\n",
+      "                        Container option for software to run the analysis:\n",
+      "                        docker or singularity\n",
+      "\n",
+      "Sections\n",
+      "  twas_fusion_1:\n",
+      "  twas_fusion_2:\n",
+      "  twas_fusion_3:        Actual weight computation\n",
+      "  twas_fusion_4:\n",
+      "  twas_fusion_5, association_test: Association test\n",
+      "  twas_fusion_6:        Clean up dummy file\n"
      ]
     }
    ],
@@ -128,15 +213,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "kernel": "SoS"
+    "kernel": "Bash"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91mERROR\u001b[0m: \u001b[91mFailed to locate twas_fusion.ipynb.sos\u001b[0m\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Test pipeline with test data\n",
     "## Switch back to abosolute path, otherwise there will be file not found error in step 5\n",
-    "sos run twas_fusion.ipynb association_test \\\n",
+    "sos run archive.ipynb association_test \\\n",
     "  --gwas_sumstat ./data/sum_stat.sumstats \\\n",
     "  --molecular-pheno ./data/gene_exp_file.txt \\\n",
     "  --wd ./ \\\n",
@@ -147,8 +241,38 @@
     "  --window 500000 \\\n",
     "  --model blup lasso top1 enet \\\n",
     "  --container gaow/twas \n",
-    "\n",
+    "  \n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "source": [
     "## Association test only \n",
+    "If using exisiting weight, use the association test(AssocTest) workflow. A minimum working example is shown below\n",
+    "\n",
+    "FIXME: please complete it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Keyboard Interrupt\n"
+     ]
+    }
+   ],
+   "source": [
     "sos run twas_fusion.ipynb association_test \\\n",
     "  --gwas_sumstat /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/sum_stat.sumstats \\\n",
     "  --molecular-pheno /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/gene_exp_file.txt \\\n",
@@ -164,6 +288,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "kernel": "SoS"
@@ -175,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "kernel": "SoS"
    },
@@ -516,32 +651,32 @@
    },
    "outputs": [],
    "source": [
-    "#Susie\n",
+    "#Susie tesst\n",
     "[susie_3]\n",
-    "input: group_with = 'regions'\n",
+    "input:  group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
     "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt'\n",
-    "\n",
     "parameter: causal_variables_L = 10\n",
     "parameter: scaled_prior_variance = 0.1\n",
-    "    \n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container, volumes = [f'{wd:a}:{wd:a}']\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container,volumes = [f'{wd:a}:{wd:a}']\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"susieR\")\n",
     "    library(\"plink2R\")\n",
-    "    genos = read_plink(_input[0]:n)\n",
-    "    \n",
+    "    library(\"readr\")\n",
+    "    genos = read_plink(\"$[_input[0]:n]\")\n",
     "    # hsq for removing all the na snps\n",
     "    X = genos$bed%>%t()%>%na.omit()%>%t()%>%scale()\n",
-    "    Y = geno$fam%>%as.tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
+    "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
     "    fitted1 = susie(X, Y$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
     "                  estimate_prior_variance = FALSE,\n",
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
     "    H1 = var(predict(fitted1)) / var(Y$V6)\n",
+    "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
+    "    top_snp_full_sample = colnames(X)[top_pip]\n",
     "    # hsq for removing all the na samples\n",
     "    X2 = genos$bed%>%na.omit()%>%scale()\n",
     "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
@@ -552,7 +687,7 @@
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
     "    H2 = var(predict(fitted2)) / var(Y$V6)\n",
     "    # hsq for removing all the na samples and na SNPs\n",
-    "    X3 = X[rownames(X) == Y$name]\n",
+    "    X3 = X[rownames(X) == Y$name]%>%as.matrix\n",
     "    fitted3 = susie(X3, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
@@ -562,22 +697,32 @@
     "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
     "    sumstats <- univariate_regression(X, Y$V6)\n",
     "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
+    "    max(abs(z_scores))\n",
     "    top_snp = which(abs(z_scores) == max(abs(z_scores)))\n",
+    "    top_snp\n",
     "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
+    "    HH\n",
     "    # storing all the HSQ\n",
-    "    hsq_tbl = tibble(hsq_full_sample = H1, hsq_full_snp = H2, hsq_neither = H3, hsq_naive = H4)\n",
-    "    hsq_tbl%>%write_delim($[_output[0]])\n",
+    "    hsq_tbl = tibble(file = \"$[_input[0]:n]\", \n",
+    "                    region = \"$[_regions[3]]\",\n",
+    "                    hsq_full_sample = H1,\n",
+    "                    top_snp_full_sample = top_snp_full_sample,\n",
+    "                    hsq_full_snp = H2,\n",
+    "                    hsq_neither = H3,\n",
+    "                    hsq_naive = HH,\n",
+    "                    top_snp_naive = colnames(X)[top_snp])\n",
+    "  \n",
+    "    hsq_tbl%>%write_delim(\"$[_output[0]]\",delim = \"\\t\")\n",
     "    # storing the wgt computed from susie, excluding only the na SNP\n",
-    "    susie_wgt = tibble(susie = coef(fitted)[2:length(coef(fitted))])\n",
-    "    susie_wgt%>%write_delim($[_output[1]])\n",
-    "    \n",
+    "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
+    "    susie_wgt%>%write_delim(\"$[_output[1]]\",delim = \"\\t\")\n",
     "#Create all_hsq for susie\n",
     "[susie_4]\n",
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt'\n",
     "bash: expand= \"$[ ]\"\n",
     "  head -1 $[_input[0]] > $[_output]\n",
-    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample >> $[_output]"
+    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output]"
    ]
   }
  ],
@@ -598,10 +743,18 @@
   "sos": {
    "kernels": [
     [
+     "Bash",
+     "calysto_bash",
+     "Bash",
+     "#E6EEFF",
+     ""
+    ],
+    [
      "SoS",
      "sos",
      "",
-     ""
+     "",
+     "sos"
     ]
    ],
    "version": "0.20.1"
