--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -651,7 +651,7 @@
    },
    "outputs": [],
    "source": [
-    "#Susie tesst\n",
+    "#Susie test\n",
     "[susie_3]\n",
     "input:  group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
@@ -667,7 +667,7 @@
     "    library(\"readr\")\n",
     "    genos = read_plink(\"$[_input[0]:n]\")\n",
     "    # hsq for removing all the na snps\n",
-    "    X = genos$bed%>%t()%>%na.omit()%>%t()%>%scale()\n",
+    "    X = genos$bed%>%t()%>%na.omit()%>%t()\n",
     "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
     "    fitted1 = susie(X, Y$V6,\n",
     "                  L = $[causal_variables_L],\n",
@@ -678,7 +678,7 @@
     "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
     "    top_snp_full_sample = colnames(X)[top_pip]\n",
     "    # hsq for removing all the na samples\n",
-    "    X2 = genos$bed%>%na.omit()%>%scale()\n",
+    "    X2 = genos$bed%>%na.omit()\n",
     "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
     "    fitted2 = susie(X2, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
